force-app/main/default/objects/ARF_Payment_Method__c/ARF_Payment_Method__c.object-meta.xml
<CustomObject>
    <description>Tokenized payment methods (credit card or ACH) for portal payments</description>
    <label>Payment Method</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Payment Method Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>