force-app/main/default/objects/ARF_Payment_Method__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Bank account type for ACH</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
                <default>true</default>
                <label>Checking</label>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>