force-app/main/default/objects/ARF_Payment_Method__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>Bank name for ACH payment methods</description>
    <label>Bank Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>