force-app/main/default/objects/ARF_Payment_Method__c/fields/Card_Brand__c.field-meta.xml
<CustomField>
    <fullName>Card_Brand__c</fullName>
    <description>Card brand (Visa, Mastercard, Amex, Discover)</description>
    <label>Card Brand</label>
    <length>20</length>
    <type>Text</type>
</CustomField>