force-app/main/default/objects/ARF_Payment_Method__c/fields/Expiry_Month__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Month__c</fullName>
    <description>Card expiration month</description>
    <label>Expiry Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>