force-app/main/default/objects/ARF_Payment_Method__c/fields/Expiry_Year__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Year__c</fullName>
    <description>Card expiration year</description>
    <label>Expiry Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>