force-app/main/default/objects/ARF_Payment_Method__c/fields/Gateway_ID__c.field-meta.xml
<CustomField>
    <fullName>Gateway_ID__c</fullName>
    <description>Payment gateway unique identifier for this method</description>
    <label>Gateway ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>