force-app/main/default/objects/ARF_Payment_Method__c/fields/Last_Four__c.field-meta.xml
<CustomField>
    <fullName>Last_Four__c</fullName>
    <description>Last four digits of card or account number</description>
    <label>Last Four</label>
    <length>4</length>
    <type>Text</type>
</CustomField>