force-app/main/default/objects/ARF_Payment_Method__c/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <description>User-friendly label for this payment method</description>
    <label>Nickname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>