force-app/main/default/objects/ARF_Payment_Method__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>Gateway tokenized payment method identifier</description>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>