force-app/main/default/objects/ARF_Payment_Method__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Payment method type</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>